// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`application should change tab 1`] = `
<div
  data-test="tabs-content"
>
  <div
    aria-labelledby="react-tabs-4"
    class="react-tabs__tab-panel react-tabs__tab-panel--selected"
    data-test="tab-panel"
    id="react-tabs-5"
    role="tabpanel"
  >
    first tab content
  </div>
  <div
    aria-labelledby="react-tabs-6"
    class="react-tabs__tab-panel"
    data-test="tab-panel"
    id="react-tabs-7"
    role="tabpanel"
  />
</div>
`;

exports[`application should change tab 2`] = `
<div>
  <p>
    Hello world!
  </p>
  <div
    class="react-tabs"
    data-tabs="true"
  >
    <ul
      class="react-tabs__tab-list"
      role="tablist"
    >
      <li
        aria-controls="react-tabs-5"
        aria-disabled="false"
        aria-selected="false"
        class="react-tabs__tab"
        data-test="tab-control"
        id="react-tabs-4"
        role="tab"
      >
        first tab
      </li>
      <li
        aria-controls="react-tabs-7"
        aria-disabled="false"
        aria-selected="true"
        class="react-tabs__tab react-tabs__tab--selected"
        data-test="tab-control"
        id="react-tabs-6"
        role="tab"
        tabindex="0"
      >
        second tab
      </li>
    </ul>
    <div
      data-test="tabs-content"
    >
      <div
        aria-labelledby="react-tabs-4"
        class="react-tabs__tab-panel"
        data-test="tab-panel"
        id="react-tabs-5"
        role="tabpanel"
      />
      <div
        aria-labelledby="react-tabs-6"
        class="react-tabs__tab-panel react-tabs__tab-panel--selected"
        data-test="tab-panel"
        id="react-tabs-7"
        role="tabpanel"
      >
        second tab content
      </div>
    </div>
  </div>
</div>
`;

exports[`application should change tab 3`] = `
<div
  data-test="tabs-content"
>
  <div
    aria-labelledby="react-tabs-4"
    class="react-tabs__tab-panel react-tabs__tab-panel--selected"
    data-test="tab-panel"
    id="react-tabs-5"
    role="tabpanel"
  >
    first tab content
  </div>
  <div
    aria-labelledby="react-tabs-6"
    class="react-tabs__tab-panel"
    data-test="tab-panel"
    id="react-tabs-7"
    role="tabpanel"
  />
</div>
`;

exports[`application should render components tree 1`] = `
<div>
  <p>
    Hello world!
  </p>
  <div
    class="react-tabs"
    data-tabs="true"
  >
    <ul
      class="react-tabs__tab-list"
      role="tablist"
    >
      <li
        aria-controls="react-tabs-1"
        aria-disabled="false"
        aria-selected="true"
        class="react-tabs__tab react-tabs__tab--selected"
        data-test="tab-control"
        id="react-tabs-0"
        role="tab"
        tabindex="0"
      >
        first tab
      </li>
      <li
        aria-controls="react-tabs-3"
        aria-disabled="false"
        aria-selected="false"
        class="react-tabs__tab"
        data-test="tab-control"
        id="react-tabs-2"
        role="tab"
      >
        second tab
      </li>
    </ul>
    <div
      data-test="tabs-content"
    >
      <div
        aria-labelledby="react-tabs-0"
        class="react-tabs__tab-panel react-tabs__tab-panel--selected"
        data-test="tab-panel"
        id="react-tabs-1"
        role="tabpanel"
      >
        first tab content
      </div>
      <div
        aria-labelledby="react-tabs-2"
        class="react-tabs__tab-panel"
        data-test="tab-panel"
        id="react-tabs-3"
        role="tabpanel"
      />
    </div>
  </div>
</div>
`;
